--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -5,7 +5,8 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  background-color: #003366;
+  background-color: #F7F5F0;
+  font-family: Lexend, sans-serif;
 }
 
 #root {
